# gallery-evaluator-plus

./: CMakeLists.txt  Makefile  README.md  gallery_eval_plus
data/: layouts.yaml  paintings.yaml
include/: csv_writer.h  evaluator.h  generators.h  models.h  parser.h
output/: scores.csv
src/: csv_writer.cpp  evaluator.cpp  generators.cpp  main.cpp  parser.cpp
